lib/g4/qasm3Parser.cpp

// Generated from g4/qasm3Parser.g4 by ANTLR 4.13.2


#include "qasm3ParserListener.h"
#include "qasm3ParserVisitor.h"

#include "qasm3Parser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct Qasm3ParserStaticData final {
  Qasm3ParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  Qasm3ParserStaticData(const Qasm3ParserStaticData&) = delete;
  Qasm3ParserStaticData(Qasm3ParserStaticData&&) = delete;
  Qasm3ParserStaticData& operator=(const Qasm3ParserStaticData&) = delete;
  Qasm3ParserStaticData& operator=(Qasm3ParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag qasm3parserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<Qasm3ParserStaticData> qasm3parserParserStaticData = nullptr;

void qasm3parserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (qasm3parserParserStaticData != nullptr) {
    return;
  }
#else
  assert(qasm3parserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<Qasm3ParserStaticData>(
    std::vector<std::string>{
      "program", "version", "statement", "annotation", "scope", "pragma", 
      "statementOrScope", "calibrationGrammarStatement", "includeStatement", 
      "breakStatement", "continueStatement", "endStatement", "forStatement", 
      "ifStatement", "returnStatement", "whileStatement", "switchStatement", 
      "switchCaseItem", "barrierStatement", "boxStatement", "delayStatement", 
      "nopStatement", "gateCallStatement", "measureArrowAssignmentStatement", 
      "resetStatement", "aliasDeclarationStatement", "classicalDeclarationStatement", 
      "constDeclarationStatement", "ioDeclarationStatement", "oldStyleDeclarationStatement", 
      "quantumDeclarationStatement", "defStatement", "externStatement", 
      "gateStatement", "assignmentStatement", "expressionStatement", "calStatement", 
      "defcalStatement", "expression", "aliasExpression", "declarationExpression", 
      "measureExpression", "rangeExpression", "setExpression", "arrayLiteral", 
      "indexOperator", "indexedIdentifier", "returnSignature", "gateModifier", 
      "scalarType", "qubitType", "arrayType", "arrayReferenceType", "designator", 
      "defcalTarget", "defcalArgumentDefinition", "defcalOperand", "gateOperand", 
      "externArgument", "argumentDefinition", "argumentDefinitionList", 
      "defcalArgumentDefinitionList", "defcalOperandList", "expressionList", 
      "identifierList", "gateOperandList", "externArgumentList"
    },
    std::vector<std::string>{
      "", "'OPENQASM'", "'include'", "'defcalgrammar'", "'def'", "'cal'", 
      "'defcal'", "'gate'", "'extern'", "'box'", "'let'", "'break'", "'continue'", 
      "'if'", "'else'", "'end'", "'return'", "'for'", "'while'", "'in'", 
      "'switch'", "'case'", "'default'", "'nop'", "", "", "'input'", "'output'", 
      "'const'", "'readonly'", "'mutable'", "'qreg'", "'qubit'", "'creg'", 
      "'bool'", "'bit'", "'int'", "'uint'", "'float'", "'angle'", "'complex'", 
      "'array'", "'void'", "'duration'", "'stretch'", "'gphase'", "'inv'", 
      "'pow'", "'ctrl'", "'negctrl'", "'#dim'", "'durationof'", "'delay'", 
      "'reset'", "'measure'", "'barrier'", "", "'['", "']'", "'{'", "'}'", 
      "'('", "')'", "':'", "';'", "'.'", "','", "'='", "'->'", "'+'", "'++'", 
      "'-'", "'*'", "'**'", "'/'", "'%'", "'|'", "'||'", "'&'", "'&&'", 
      "'^'", "'@'", "'~'", "'!'", "", "", "", "", "'im'"
    },
    std::vector<std::string>{
      "", "OPENQASM", "INCLUDE", "DEFCALGRAMMAR", "DEF", "CAL", "DEFCAL", 
      "GATE", "EXTERN", "BOX", "LET", "BREAK", "CONTINUE", "IF", "ELSE", 
      "END", "RETURN", "FOR", "WHILE", "IN", "SWITCH", "CASE", "DEFAULT", 
      "NOP", "PRAGMA", "AnnotationKeyword", "INPUT", "OUTPUT", "CONST", 
      "READONLY", "MUTABLE", "QREG", "QUBIT", "CREG", "BOOL", "BIT", "INT", 
      "UINT", "FLOAT", "ANGLE", "COMPLEX", "ARRAY", "VOID", "DURATION", 
      "STRETCH", "GPHASE", "INV", "POW", "CTRL", "NEGCTRL", "DIM", "DURATIONOF", 
      "DELAY", "RESET", "MEASURE", "BARRIER", "BooleanLiteral", "LBRACKET", 
      "RBRACKET", "LBRACE", "RBRACE", "LPAREN", "RPAREN", "COLON", "SEMICOLON", 
      "DOT", "COMMA", "EQUALS", "ARROW", "PLUS", "DOUBLE_PLUS", "MINUS", 
      "ASTERISK", "DOUBLE_ASTERISK", "SLASH", "PERCENT", "PIPE", "DOUBLE_PIPE", 
      "AMPERSAND", "DOUBLE_AMPERSAND", "CARET", "AT", "TILDE", "EXCLAMATION_POINT", 
      "EqualityOperator", "CompoundAssignmentOperator", "ComparisonOperator", 
      "BitshiftOperator", "IMAG", "ImaginaryLiteral", "BinaryIntegerLiteral", 
      "OctalIntegerLiteral", "DecimalIntegerLiteral", "HexIntegerLiteral", 
      "Identifier", "HardwareQubit", "FloatLiteral", "TimingLiteral", "BitstringLiteral", 
      "Whitespace", "Newline", "LineComment", "BlockComment", "VERSION_IDENTIFER_WHITESPACE", 
      "VersionSpecifier", "ARBITRARY_STRING_WHITESPACE", "StringLiteral", 
      "EAT_INITIAL_SPACE", "EAT_LINE_END", "RemainingLineContent", "CAL_PRELUDE_WHITESPACE", 
      "CAL_PRELUDE_COMMENT", "DEFCAL_PRELUDE_WHITESPACE", "DEFCAL_PRELUDE_COMMENT", 
      "CalibrationBlock"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  qasm3parserParserStaticData = std::move(staticData);
}

}

qasm3Parser::qasm3Parser(TokenStream *input) : qasm3Parser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

qasm3Parser::qasm3Parser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  qasm3Parser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *qasm3parserParserStaticData->atn, qasm3parserParserStaticData->decisionToDFA, qasm3parserParserStaticData->sharedContextCache, options);
}

qasm3Parser::~qasm3Parser() {
  delete _interpreter;
}

const atn::ATN& qasm3Parser::getATN() const {
  return *qasm3parserParserStaticData->atn;
}

std::string qasm3Parser::getGrammarFileName() const {
  return "qasm3Parser.g4";
}

const std::vector<std::string>& qasm3Parser::getRuleNames() const {
  return qasm3parserParserStaticData->ruleNames;
}

const dfa::Vocabulary& qasm3Parser::getVocabulary() const {
  return qasm3parserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView qasm3Parser::getSerializedATN() const {
  return qasm3parserParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

qasm3Parser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* qasm3Parser::ProgramContext::EOF() {
  return getToken(qasm3Parser::EOF, 0);
}

qasm3Parser::VersionContext* qasm3Parser::ProgramContext::version() {
  return getRuleContext<qasm3Parser::VersionContext>(0);
}

std::vector<qasm3Parser::StatementOrScopeContext *> qasm3Parser::ProgramContext::statementOrScope() {
  return getRuleContexts<qasm3Parser::StatementOrScopeContext>();
}

qasm3Parser::StatementOrScopeContext* qasm3Parser::ProgramContext::statementOrScope(size_t i) {
  return getRuleContext<qasm3Parser::StatementOrScopeContext>(i);
}


size_t qasm3Parser::ProgramContext::getRuleIndex() const {
  return qasm3Parser::RuleProgram;
}

void qasm3Parser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qasm3ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void qasm3Parser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qasm3ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any qasm3Parser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qasm3ParserVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

qasm3Parser::ProgramContext* qasm3Parser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, qasm3Parser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(135);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == qasm3Parser::OPENQASM) {
      setState(134);
      version();
    }
    setState(140);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 3025288650022174716) != 0) || ((((_la - 71) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 71)) & 268179457) != 0)) {
      setState(137);
      statementOrScope();
      setState(142);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(143);
    match(qasm3Parser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VersionContext ------------------------------------------------------------------

qasm3Parser::VersionContext::VersionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* qasm3Parser::VersionContext::OPENQASM() {
  return getToken(qasm3Parser::OPENQASM, 0);
}

tree::TerminalNode* qasm3Parser::VersionContext::VersionSpecifier() {
  return getToken(qasm3Parser::VersionSpecifier, 0);
}

tree::TerminalNode* qasm3Parser::VersionContext::SEMICOLON() {
  return getToken(qasm3Parser::SEMICOLON, 0);
}


size_t qasm3Parser::VersionContext::getRuleIndex() const {
  return qasm3Parser::RuleVersion;
}

void qasm3Parser::VersionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qasm3ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVersion(this);
}

void qasm3Parser::VersionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qasm3ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVersion(this);
}


std::any qasm3Parser::VersionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qasm3ParserVisitor*>(visitor))
    return parserVisitor->visitVersion(this);
  else
    return visitor->visitChildren(this);
}

qasm3Parser::VersionContext* qasm3Parser::version() {
  VersionContext *_localctx = _tracker.createInstance<VersionContext>(_ctx, getState());
  enterRule(_localctx, 2, qasm3Parser::RuleVersion);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(145);
    match(qasm3Parser::OPENQASM);
    setState(146);
    match(qasm3Parser::VersionSpecifier);
    setState(147);
    match(qasm3Parser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

qasm3Parser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

qasm3Parser::PragmaContext* qasm3Parser::StatementContext::pragma() {
  return getRuleContext<qasm3Parser::PragmaContext>(0);
}

qasm3Parser::AliasDeclarationStatementContext* qasm3Parser::StatementContext::aliasDeclarationStatement() {
  return getRuleContext<qasm3Parser::AliasDeclarationStatementContext>(0);
}

qasm3Parser::AssignmentStatementContext* qasm3Parser::StatementContext::assignmentStatement() {
  return getRuleContext<qasm3Parser::AssignmentStatementContext>(0);
}

qasm3Parser::BarrierStatementContext* qasm3Parser::StatementContext::barrierStatement() {
  return getRuleContext<qasm3Parser::BarrierStatementContext>(0);
}

qasm3Parser::BoxStatementContext* qasm3Parser::StatementContext::boxStatement() {
  return getRuleContext<qasm3Parser::BoxStatementContext>(0);
}

qasm3Parser::BreakStatementContext* qasm3Parser::StatementContext::breakStatement() {
  return getRuleContext<qasm3Parser::BreakStatementContext>(0);
}

qasm3Parser::CalStatementContext* qasm3Parser::StatementContext::calStatement() {
  return getRuleContext<qasm3Parser::CalStatementContext>(0);
}

qasm3Parser::CalibrationGrammarStatementContext* qasm3Parser::StatementContext::calibrationGrammarStatement() {
  return getRuleContext<qasm3Parser::CalibrationGrammarStatementContext>(0);
}

qasm3Parser::ClassicalDeclarationStatementContext* qasm3Parser::StatementContext::classicalDeclarationStatement() {
  return getRuleContext<qasm3Parser::ClassicalDeclarationStatementContext>(0);
}

qasm3Parser::ConstDeclarationStatementContext* qasm3Parser::StatementContext::constDeclarationStatement() {
  return getRuleContext<qasm3Parser::ConstDeclarationStatementContext>(0);
}

qasm3Parser::ContinueStatementContext* qasm3Parser::StatementContext::continueStatement() {
  return getRuleContext<qasm3Parser::ContinueStatementContext>(0);
}

qasm3Parser::DefStatementContext* qasm3Parser::StatementContext::defStatement() {
  return getRuleContext<qasm3Parser::DefStatementContext>(0);
}

qasm3Parser::DefcalStatementContext* qasm3Parser::StatementContext::defcalStatement() {
  return getRuleContext<qasm3Parser::DefcalStatementContext>(0);
}

qasm3Parser::DelayStatementContext* qasm3Parser::StatementContext::delayStatement() {
  return getRuleContext<qasm3Parser::DelayStatementContext>(0);
}

qasm3Parser::EndStatementContext* qasm3Parser::StatementContext::endStatement() {
  return getRuleContext<qasm3Parser::EndStatementContext>(0);
}

qasm3Parser::ExpressionStatementContext* qasm3Parser::StatementContext::expressionStatement() {
  return getRuleContext<qasm3Parser::ExpressionStatementContext>(0);
}

qasm3Parser::ExternStatementContext* qasm3Parser::StatementContext::externStatement() {
  return getRuleContext<qasm3Parser::ExternStatementContext>(0);
}

qasm3Parser::ForStatementContext* qasm3Parser::StatementContext::forStatement() {
  return getRuleContext<qasm3Parser::ForStatementContext>(0);
}

qasm3Parser::GateCallStatementContext* qasm3Parser::StatementContext::gateCallStatement() {
  return getRuleContext<qasm3Parser::GateCallStatementContext>(0);
}

qasm3Parser::GateStatementContext* qasm3Parser::StatementContext::gateStatement() {
  return getRuleContext<qasm3Parser::GateStatementContext>(0);
}

qasm3Parser::IfStatementContext* qasm3Parser::StatementContext::ifStatement() {
  return getRuleContext<qasm3Parser::IfStatementContext>(0);
}

qasm3Parser::IncludeStatementContext* qasm3Parser::StatementContext::includeStatement() {
  return getRuleContext<qasm3Parser::IncludeStatementContext>(0);
}

qasm3Parser::IoDeclarationStatementContext* qasm3Parser::StatementContext::ioDeclarationStatement() {
  return getRuleContext<qasm3Parser::IoDeclarationStatementContext>(0);
}

qasm3Parser::MeasureArrowAssignmentStatementContext* qasm3Parser::StatementContext::measureArrowAssignmentStatement() {
  return getRuleContext<qasm3Parser::MeasureArrowAssignmentStatementContext>(0);
}

qasm3Parser::NopStatementContext* qasm3Parser::StatementContext::nopStatement() {
  return getRuleContext<qasm3Parser::NopStatementContext>(0);
}

qasm3Parser::OldStyleDeclarationStatementContext* qasm3Parser::StatementContext::oldStyleDeclarationStatement() {
  return getRuleContext<qasm3Parser::OldStyleDeclarationStatementContext>(0);
}

qasm3Parser::QuantumDeclarationStatementContext* qasm3Parser::StatementContext::quantumDeclarationStatement() {
  return getRuleContext<qasm3Parser::QuantumDeclarationStatementContext>(0);
}

qasm3Parser::ResetStatementContext* qasm3Parser::StatementContext::resetStatement() {
  return getRuleContext<qasm3Parser::ResetStatementContext>(0);
}

qasm3Parser::ReturnStatementContext* qasm3Parser::StatementContext::returnStatement() {
  return getRuleContext<qasm3Parser::ReturnStatementContext>(0);
}

qasm3Parser::SwitchStatementContext* qasm3Parser::StatementContext::switchStatement() {
  return getRuleContext<qasm3Parser::SwitchStatementContext>(0);
}

qasm3Parser::WhileStatementContext* qasm3Parser::StatementContext::whileStatement() {
  return getRuleContext<qasm3Parser::WhileStatementContext>(0);
}

std::vector<qasm3Parser::AnnotationContext *> qasm3Parser::StatementContext::annotation() {
  return getRuleContexts<qasm3Parser::AnnotationContext>();
}

qasm3Parser::AnnotationContext* qasm3Parser::StatementContext::annotation(size_t i) {
  return getRuleContext<qasm3Parser::AnnotationContext>(i);
}


size_t qasm3Parser::StatementContext::getRuleIndex() const {
  return qasm3Parser::RuleStatement;
}

void qasm3Parser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qasm3ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void qasm3Parser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qasm3ParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any qasm3Parser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qasm3ParserVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

qasm3Parser::StatementContext* qasm3Parser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 4, qasm3Parser::RuleStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(188);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case qasm3Parser::PRAGMA: {
        enterOuterAlt(_localctx, 1);
        setState(149);
        pragma();
        break;
      }

      case qasm3Parser::INCLUDE:
      case qasm3Parser::DEFCALGRAMMAR:
      case qasm3Parser::DEF:
      case qasm3Parser::CAL:
      case qasm3Parser::DEFCAL:
      case qasm3Parser::GATE:
      case qasm3Parser::EXTERN:
      case qasm3Parser::BOX:
      case qasm3Parser::LET:
      case qasm3Parser::BREAK:
      case qasm3Parser::CONTINUE:
      case qasm3Parser::IF:
      case qasm3Parser::END:
      case qasm3Parser::RETURN:
      case qasm3Parser::FOR:
      case qasm3Parser::WHILE:
      case qasm3Parser::SWITCH:
      case qasm3Parser::NOP:
      case qasm3Parser::AnnotationKeyword:
      case qasm3Parser::INPUT:
      case qasm3Parser::OUTPUT:
      case qasm3Parser::CONST:
      case qasm3Parser::QREG:
      case qasm3Parser::QUBIT:
      case qasm3Parser::CREG:
      case qasm3Parser::BOOL:
      case qasm3Parser::BIT:
      case qasm3Parser::INT:
      case qasm3Parser::UINT:
      case qasm3Parser::FLOAT:
      case qasm3Parser::ANGLE:
      case qasm3Parser::COMPLEX:
      case qasm3Parser::ARRAY:
      case qasm3Parser::DURATION:
      case qasm3Parser::STRETCH:
      case qasm3Parser::GPHASE:
      case qasm3Parser::INV:
      case qasm3Parser::POW:
      case qasm3Parser::CTRL:
      case qasm3Parser::NEGCTRL:
      case qasm3Parser::DURATIONOF:
      case qasm3Parser::DELAY:
      case qasm3Parser::RESET:
      case qasm3Parser::MEASURE:
      case qasm3Parser::BARRIER:
      case qasm3Parser::BooleanLiteral:
      case qasm3Parser::LPAREN:
      case qasm3Parser::MINUS:
      case qasm3Parser::TILDE:
      case qasm3Parser::EXCLAMATION_POINT:
      case qasm3Parser::ImaginaryLiteral:
      case qasm3Parser::BinaryIntegerLiteral:
      case qasm3Parser::OctalIntegerLiteral:
      case qasm3Parser::DecimalIntegerLiteral:
      case qasm3Parser::HexIntegerLiteral:
      case qasm3Parser::Identifier:
      case qasm3Parser::HardwareQubit:
      case qasm3Parser::FloatLiteral:
      case qasm3Parser::TimingLiteral:
      case qasm3Parser::BitstringLiteral: {
        enterOuterAlt(_localctx, 2);
        setState(153);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == qasm3Parser::AnnotationKeyword) {
          setState(150);
          annotation();
          setState(155);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(186);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
        case 1: {
          setState(156);
          aliasDeclarationStatement();
          break;
        }

        case 2: {
          setState(157);
          assignmentStatement();
          break;
        }

        case 3: {
          setState(158);
          barrierStatement();
          break;
        }

        case 4: {
          setState(159);
          boxStatement();
          break;
        }

        case 5: {
          setState(160);
          breakStatement();
          break;
        }

        case 6: {
          setState(161);
          calStatement();
          break;
        }

        case 7: {
          setState(162);
          calibrationGrammarStatement();
          break;
        }

        case 8: {
          setState(163);
          classicalDeclarationStatement();
          break;
        }

        case 9: {
          setState(164);
          constDeclarationStatement();
          break;
        }

        case 10: {
          setState(165);
          continueStatement();
          break;
        }

        case 11: {
          setState(166);
          defStatement();
          break;
        }
